# pico_corolla

./: .gitignore  CMakeLists.txt  PINMAP.md  build.sh  flash.sh
include/: can2040.c
src/: main.c
